# ncd-python

./: MANIFEST.in  README.md  setup.cfg
src/ncd/: __init__.py  accessor.py  bitbash.py  header.py  read.py  util.py
src/ncd.egg-info/: PKG-INFO  SOURCES.txt
tests/: smoke.ncd  test_bitbash.py  test_http.py  test_read.py
