[metadata]
name = ncd
version = 0.0.1
author = Dan Sheppard
author_email = dan@ebi.ac.uk
description = Pure-python NCD library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ens-ds23/ncd-python
project_urls =
    Bug Tracker = https://github.com/ens-ds23/ncd-python/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
